2007-12-07 18:37 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/viewer3d/fe/unv/UNVParser.java (readGroup): Fix
	previous patch to also work with groups of type 2430.

2007-11-30 00:22 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/viewer3d/fe/unv/UNVParser.java (readGroup): Parse
	failed when a group name begins with 8.

2007-11-11 00:13 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/viewer3d/OEMMBehavior.java
	  src/org/jcae/viewer3d/OEMMViewer.java: Files are removed
	and put into a new viewer3d-amibe module.  This way there is
	no dependency between viewer3d and amibe modules, and
	build.properties does not have to be tweaked when compiling.

2007-11-10 22:32 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/viewer3d/OEMMBehavior.java
	  src/org/jcae/viewer3d/OEMMViewer.java: AbstractTriangle class
	has been replaced by Triangle in jCAE.

2007-10-24 10:01 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/viewer3d: Add Java generics and annotations.
	* src/org/jcae/viewer3d/cad/CADDomainAdapator.java: Renamed into...
	* src/org/jcae/viewer3d/cad/CADDomainAdaptor.java
	* src/org/jcae/viewer3d/fd/FDDomainAdapter.java: Renamed into...
	* src/org/jcae/viewer3d/fd/FDDomainAdaptor.java
	* src/org/jcae/viewer3d/fe/FEDomainAdapter.java: Renamed into...
	* src/org/jcae/viewer3d/fe/FEDomainAdaptor.java

2007-10-16 17:02 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/viewer3d/OEMMViewer.java: Triangle.vertex is
	now an AbstractVertex array in jcae.jar.

2007-09-19 16:20 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/viewer3d/OEMMBehavior.java: Replace proprietary
	com.sun.jmx.remote.util.CacheMap by an array of SoftReference.

2007-09-06 10:07 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/viewer3d/OEMMViewer.java: Remove all
	  meshOEMM(OEMM) methods and keep only meshOEMM(Mesh).

2007-09-04 14:21 Denis Barbier <barbier@users.sourceforge.net>
